src/objects/Case_Note__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Notes</relationshipLabel>
        <relationshipName>Case_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encrypted>true</encrypted>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Protocols_and_Safeguards__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Protocols and Safeguards</label>
        <referenceTo>Protocols_and_Safeguards__c</referenceTo>
        <relationshipLabel>Case Notes</relationshipLabel>
        <relationshipName>Case_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Case Notes</relationshipLabel>
        <relationshipName>Case_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encrypted>true</encrypted>
        <label>Case Note Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Notes</pluralLabel>
    <recordTypes>
        <fullName>Collaborative</fullName>
        <active>true</active>
        <description>Collaborative Case Notes will be shared with all support team members for this individual&apos;s case.</description>
        <label>Collaborative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Restricted</fullName>
        <active>true</active>
        <description>Restricted Case Notes can only be created by the Navigator and will only be seen by the Navigator for this individual’s case.</description>
        <label>Restricted</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Lookup_Validation</fullName>
        <active>true</active>
        <description>A case note must have either a Referral number, a Case number or a Protocol &amp; Safeguard number for the record to be saved</description>
        <errorConditionFormula>ISBLANK(Referral__c)&amp;&amp; ISBLANK(Case__c)&amp;&amp;
ISBLANK(Protocols_and_Safeguards__c)</errorConditionFormula>
        <errorMessage>The Case Note cannot be saved. It must have one of the following: Referral number, Case number or Protocol and Safeguard</errorMessage>
    </validationRules>
</CustomObject>